# simple-cpp-setup

./: CMakeLists.txt  README.md
src/: main.cpp  square.cpp  square.hpp
tests/: test.cpp
